[gd_scene load_steps=33 format=3 uid="uid://drpjvxm3qjcl7"]

[ext_resource type="Script" path="res://scenes/menus/menus.gd" id="1_n6v3l"]
[ext_resource type="PackedScene" uid="uid://hmfard6sqx6h" path="res://scenes/camera/free_roam_camera.tscn" id="2_f0b52"]
[ext_resource type="PackedScene" uid="uid://5ctllddc4obb" path="res://scenes/menus/main_menu.tscn" id="3_mqdpw"]
[ext_resource type="PackedScene" uid="uid://cfjp23jay1xyw" path="res://scenes/menus/settings_menu.tscn" id="4_78aek"]
[ext_resource type="PackedScene" uid="uid://vff026q47yk" path="res://scenes/menus/secret_settings_menu.tscn" id="5_rhiqq"]
[ext_resource type="PackedScene" uid="uid://dvp3k2yn1w8rb" path="res://scenes/menus/cave_of_wonders.tscn" id="6_r2f2f"]
[ext_resource type="PackedScene" uid="uid://bcttde4rl6c7u" path="res://scenes/help_bot/help_bot.tscn" id="7_bh0tg"]
[ext_resource type="PackedScene" uid="uid://b7pp5suyru2lf" path="res://scenes/menus/interactive_element.tscn" id="8_o8ma5"]
[ext_resource type="Texture2D" uid="uid://difhinmukve4m" path="res://assets/art/items/Wrench.png" id="9_kg5t1"]
[ext_resource type="Texture2D" uid="uid://dslaby48dc3jl" path="res://assets/art/items/FireExtinguisher.png" id="10_aa2fp"]
[ext_resource type="Texture2D" uid="uid://4damehrpitmi" path="res://assets/art/items/CrumpledPaper.png" id="11_ffab4"]
[ext_resource type="FontFile" uid="uid://bckbkknmti08k" path="res://assets/fonts/m6x11.ttf" id="12_hpcjg"]
[ext_resource type="PackedScene" uid="uid://be8gnb7g2r1qb" path="res://scenes/letters/collected_letters.tscn" id="13_3vrp3"]
[ext_resource type="PackedScene" uid="uid://ddhqiieofpixr" path="res://scenes/letters/collectable_letter.tscn" id="14_duyw0"]
[ext_resource type="SpriteFrames" uid="uid://cycrm7f7m0ie8" path="res://assets/art/running_letters/running_r.tres" id="15_nd253"]
[ext_resource type="PackedScene" uid="uid://dgb87ltag6my4" path="res://scenes/cursor/foam.tscn" id="16_mei6b"]
[ext_resource type="Texture2D" uid="uid://y8wgjwjjrbhx" path="res://assets/art/menu_components/SmallStartButton.png" id="18_pi5ji"]
[ext_resource type="AudioStream" uid="uid://dyfhd34jb30ta" path="res://assets/audio/detective-stories-198357.mp3" id="19_6jqg8"]
[ext_resource type="AudioStream" uid="uid://bq72alqswhjul" path="res://assets/audio/mixkit-creepy-radio-frequency-2558-[AudioTrimmer.com].mp3" id="20_y437t"]
[ext_resource type="AudioStream" uid="uid://ce51ek4qxj744" path="res://assets/audio/mystery-of-the-investigation-215184.mp3" id="22_pas85"]
[ext_resource type="AudioStream" uid="uid://b38sb58jdd2cs" path="res://assets/audio/suspense-e-investigacao-hipervigilrpg-211156.mp3" id="23_o0sdu"]
[ext_resource type="AudioStream" uid="uid://b4ntxlvfvs71d" path="res://assets/audio/video-game-boss-fiight-259885.mp3" id="23_qeh6t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0o1dt"]
radius = 6.0104
height = 39.598

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ej1cw"]
radius = 12.0
height = 62.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tj3n1"]
size = Vector2(1088, 576)

[sub_resource type="LabelSettings" id="LabelSettings_0o4ac"]
font = ExtResource("12_hpcjg")
font_size = 32
font_color = Color(0.333333, 0.333333, 0.333333, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hbp62"]
font = ExtResource("12_hpcjg")
font_size = 32
font_color = Color(0.333333, 0.333333, 0.333333, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f4r0k"]
radius = 13.0
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6cai"]
size = Vector2(158, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xla6"]
size = Vector2(3392, 576)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o57v0"]
size = Vector2(192, 1504)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uubxr"]
size = Vector2(4288, 192)

[node name="Menus" type="Node2D"]
script = ExtResource("1_n6v3l")

[node name="Camera" type="Node2D" parent="."]

[node name="FreeRoamCamera" parent="Camera" node_paths=PackedStringArray("snap_points", "home_point", "centre_point") instance=ExtResource("2_f0b52")]
position_smoothing_enabled = true
position_smoothing_speed = 10.0
snap_distance = 96.0
snap_points = [NodePath("../MainMenuCameraMarker"), NodePath("../SettingsCameraMarker"), NodePath("../SecretSettingsCameraMarker"), NodePath("../CaveOfWondersCameraMarker")]
home_point = NodePath("../MainMenuCameraMarker")
centre_point = NodePath("../SettingsCameraMarker")

[node name="MainMenuCameraMarker" type="Marker2D" parent="Camera"]
position = Vector2(576, 324)

[node name="SettingsCameraMarker" type="Marker2D" parent="Camera"]
position = Vector2(1728, 324)

[node name="SecretSettingsCameraMarker" type="Marker2D" parent="Camera"]
position = Vector2(2880, 324)

[node name="CaveOfWondersCameraMarker" type="Marker2D" parent="Camera"]
position = Vector2(4238, -1428)

[node name="Menus" type="Node2D" parent="."]

[node name="MainMenu" parent="Menus" instance=ExtResource("3_mqdpw")]

[node name="SettingsMenu" parent="Menus" instance=ExtResource("4_78aek")]
position = Vector2(1152, 0)

[node name="SecretSettingsMenu" parent="Menus" instance=ExtResource("5_rhiqq")]
position = Vector2(2304, 0)

[node name="CaveOfWonders" parent="Menus" instance=ExtResource("6_r2f2f")]
position = Vector2(4238, -1428)

[node name="DialogueMarkers" type="Node2D" parent="."]

[node name="SettingsButtonMarker" type="Marker2D" parent="DialogueMarkers"]
position = Vector2(623, 476)

[node name="SecretSettingsButtonMarker" type="Marker2D" parent="DialogueMarkers"]
position = Vector2(1839, 352)

[node name="LockedSecretSettingsButtonMarker" type="Marker2D" parent="DialogueMarkers"]
position = Vector2(1766, 352)

[node name="CageDialogue" type="Marker2D" parent="DialogueMarkers"]
position = Vector2(3084, 294)

[node name="MonologueMarker" type="Marker2D" parent="DialogueMarkers"]
position = Vector2(823, 295)

[node name="CaveMarker" type="Marker2D" parent="DialogueMarkers"]
position = Vector2(4286, -1340)

[node name="MovementMarkers" type="Node2D" parent="."]

[node name="CageMarkers" type="Node2D" parent="MovementMarkers"]

[node name="CageMarker1" type="Marker2D" parent="MovementMarkers/CageMarkers"]
position = Vector2(2857, 276)

[node name="CageMarker2" type="Marker2D" parent="MovementMarkers/CageMarkers"]
position = Vector2(2893, 268)

[node name="CageMarker3" type="Marker2D" parent="MovementMarkers/CageMarkers"]
position = Vector2(2865, 312)

[node name="CageMarker4" type="Marker2D" parent="MovementMarkers/CageMarkers"]
position = Vector2(2901, 304)

[node name="ScreenMarkers" type="Node2D" parent="MovementMarkers"]

[node name="ScreenMarker1" type="Marker2D" parent="MovementMarkers/ScreenMarkers"]
position = Vector2(573, 262)

[node name="ScreenMarker2" type="Marker2D" parent="MovementMarkers/ScreenMarkers"]
position = Vector2(492, 207)

[node name="ScreenMarker3" type="Marker2D" parent="MovementMarkers/ScreenMarkers"]
position = Vector2(659, 322)

[node name="ScreenMarker4" type="Marker2D" parent="MovementMarkers/ScreenMarkers"]
position = Vector2(643, 198)

[node name="ScreenMarker5" type="Marker2D" parent="MovementMarkers/ScreenMarkers"]
position = Vector2(507, 305)

[node name="BossFightMarkers" type="Node2D" parent="MovementMarkers"]

[node name="BossFightMarker1" type="Marker2D" parent="MovementMarkers/BossFightMarkers"]
position = Vector2(416, 552)

[node name="BossFightMarker2" type="Marker2D" parent="MovementMarkers/BossFightMarkers"]
position = Vector2(768, 544)

[node name="BossFightMarker3" type="Marker2D" parent="MovementMarkers/BossFightMarkers"]
position = Vector2(599, 545)

[node name="BossFightMarker4" type="Marker2D" parent="MovementMarkers/BossFightMarkers"]
position = Vector2(424, 583)

[node name="BossFightMarker5" type="Marker2D" parent="MovementMarkers/BossFightMarkers"]
position = Vector2(764, 581)

[node name="Items" type="Node2D" parent="."]

[node name="Wrench" parent="Items" instance=ExtResource("8_o8ma5")]
position = Vector2(1545, 179)
collision_layer = 1024
breakable = false

[node name="Sprite2D" type="Sprite2D" parent="Items/Wrench"]
scale = Vector2(2, 2)
texture = ExtResource("9_kg5t1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Wrench"]
rotation = -0.785397
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_0o1dt")

[node name="FireExtinguisher" parent="Items" instance=ExtResource("8_o8ma5")]
position = Vector2(-120, 496)
collision_layer = 1024
breakable = false
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Items/FireExtinguisher"]
scale = Vector2(2, 2)
texture = ExtResource("10_aa2fp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/FireExtinguisher"]
position = Vector2(-16, 1)
shape = SubResource("CapsuleShape2D_ej1cw")

[node name="CrumpledPasswordHint" parent="Items" instance=ExtResource("8_o8ma5")]
position = Vector2(248, 536)
collision_layer = 1024
breakable = false
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Items/CrumpledPasswordHint"]
texture = ExtResource("11_ffab4")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Items/CrumpledPasswordHint"]
polygon = PackedVector2Array(8, -45, 16, -35, 24, -34, 43, -30, 43, -20, 46, -18, 43, -11, 40, -3, 46, 7, 42, 15, 38, 20, 39, 27, 38, 35, 28, 41, 21, 46, 5, 42, 0, 42, -13, 47, -22, 42, -31, 47, -36, 43, -38, 33, -35, 28, -37, 19, -46, -2, -46, -14, -40, -22, -39, -25, -39, -31, -32, -37, -30, -40, -26, -40, -19, -36, -12, -39, -9, -40, 0, -43)

[node name="ItemDropZones" type="Node2D" parent="."]

[node name="MainMenu" type="Area2D" parent="ItemDropZones"]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDropZones/MainMenu"]
position = Vector2(576, 320)
shape = SubResource("RectangleShape2D_tj3n1")

[node name="SettingsMenu" type="Area2D" parent="ItemDropZones"]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDropZones/SettingsMenu"]
position = Vector2(1728, 320)
shape = SubResource("RectangleShape2D_tj3n1")

[node name="SecretSettingsMenu" type="Area2D" parent="ItemDropZones"]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDropZones/SecretSettingsMenu"]
position = Vector2(2880, 320)
shape = SubResource("RectangleShape2D_tj3n1")

[node name="ItemInstructions" type="Node2D" parent="."]
visible = false

[node name="MainMenu" type="Label" parent="ItemInstructions"]
offset_top = 608.0
offset_right = 1152.0
offset_bottom = 648.0
text = "<RIGHT CLICK to drop item>"
label_settings = SubResource("LabelSettings_0o4ac")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsMenu" type="Label" parent="ItemInstructions"]
offset_left = 1152.0
offset_top = 608.0
offset_right = 2304.0
offset_bottom = 648.0
text = "<RIGHT CLICK to drop item>"
label_settings = SubResource("LabelSettings_hbp62")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecretSettingsMenu" type="Label" parent="ItemInstructions"]
offset_left = 2304.0
offset_top = 608.0
offset_right = 3456.0
offset_bottom = 648.0
text = "<RIGHT CLICK to drop item>"
label_settings = SubResource("LabelSettings_hbp62")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedLetters" parent="." instance=ExtResource("13_3vrp3")]

[node name="CollectableLetters" type="Node2D" parent="."]

[node name="R" parent="CollectableLetters" instance=ExtResource("14_duyw0")]
visible = false
position = Vector2(20, -54)
can_collect = true
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollectableLetters/R"]
position = Vector2(0, -10)
sprite_frames = ExtResource("15_nd253")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectableLetters/R"]
shape = SubResource("CapsuleShape2D_f4r0k")

[node name="Foam" parent="." instance=ExtResource("16_mei6b")]
position = Vector2(184, -144)

[node name="TrueStartButton" parent="." instance=ExtResource("8_o8ma5")]
visible = false
position = Vector2(576, 550)
collision_layer = 8192
breakable = false
detatch_shake_strength = 20.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="TrueStartButton"]
texture = ExtResource("18_pi5ji")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrueStartButton"]
shape = SubResource("RectangleShape2D_u6cai")

[node name="Sound" type="Node2D" parent="."]

[node name="DetectiveMusic" type="AudioStreamPlayer2D" parent="Sound"]
position = Vector2(1152, 320)
stream = ExtResource("19_6jqg8")

[node name="StaticNoise" type="AudioStreamPlayer2D" parent="Sound"]
position = Vector2(576, 256)
stream = ExtResource("20_y437t")

[node name="MainMusic" type="AudioStreamPlayer2D" parent="Sound"]
position = Vector2(1728, 321)
stream = ExtResource("22_pas85")
max_distance = 3000.0

[node name="EeryMusic" type="AudioStreamPlayer2D" parent="Sound"]
position = Vector2(4238, -1428)
stream = ExtResource("23_o0sdu")
autoplay = true

[node name="BossBattleMusic" type="AudioStreamPlayer2D" parent="Sound"]
position = Vector2(574, 551)
stream = ExtResource("23_qeh6t")

[node name="HelpBot" parent="." instance=ExtResource("7_bh0tg")]
position = Vector2(2879, 289)

[node name="ItemBoundery" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemBoundery"]
position = Vector2(1728, 320)
shape = SubResource("RectangleShape2D_5xla6")
debug_color = Color(0, 0.688334, 0.7, 0.14902)

[node name="ItemRespawnPoint" type="Marker2D" parent="ItemBoundery"]
position = Vector2(576, 320)

[node name="HammerManBoundery" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerManBoundery"]
position = Vector2(-320, 336)
shape = SubResource("RectangleShape2D_o57v0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HammerManBoundery"]
position = Vector2(3776, 336)
shape = SubResource("RectangleShape2D_o57v0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HammerManBoundery"]
position = Vector2(1728, 992)
shape = SubResource("RectangleShape2D_uubxr")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="HammerManBoundery"]
position = Vector2(1728, -320)
shape = SubResource("RectangleShape2D_uubxr")

[connection signal="returned_home" from="Camera/FreeRoamCamera" to="." method="_on_free_roam_camera_returned_home"]
[connection signal="snap" from="Camera/FreeRoamCamera" to="." method="_on_free_roam_camera_snap"]
[connection signal="a_collected" from="Menus/MainMenu" to="." method="_on_main_menu_a_collected"]
[connection signal="crumpled_paper_clicked" from="Menus/MainMenu" to="." method="_on_crumpled_password_hint_click"]
[connection signal="hammer_man_level_changed" from="Menus/MainMenu" to="." method="_on_main_menu_hammer_man_level_changed"]
[connection signal="panel_broken" from="Menus/MainMenu" to="." method="_on_main_menu_panel_broken"]
[connection signal="s_collected" from="Menus/MainMenu" to="." method="_on_main_menu_s_collected"]
[connection signal="settings_pressed" from="Menus/MainMenu" to="." method="_on_main_menu_settings_pressed"]
[connection signal="start_button_exploded" from="Menus/MainMenu" to="." method="_on_main_menu_start_button_exploded"]
[connection signal="back_pressed" from="Menus/SettingsMenu" to="." method="_on_settings_menu_back_pressed"]
[connection signal="correct_password" from="Menus/SettingsMenu" to="." method="_on_settings_menu_correct_password"]
[connection signal="correct_username" from="Menus/SettingsMenu" to="." method="_on_settings_menu_correct_username"]
[connection signal="incorrect_password" from="Menus/SettingsMenu" to="." method="_on_settings_menu_incorrect_password"]
[connection signal="incorrect_username" from="Menus/SettingsMenu" to="." method="_on_settings_menu_incorrect_username"]
[connection signal="mute_music_toggled" from="Menus/SettingsMenu" to="." method="_on_settings_menu_mute_music_toggled"]
[connection signal="mute_sfx_toggled" from="Menus/SettingsMenu" to="." method="_on_settings_menu_mute_sfx_toggled"]
[connection signal="secret_settings_pressed" from="Menus/SettingsMenu" to="." method="_on_settings_menu_secret_settings_pressed"]
[connection signal="back_pressed" from="Menus/SecretSettingsMenu" to="." method="_on_secret_settings_menu_back_pressed"]
[connection signal="t_1_collected" from="Menus/SecretSettingsMenu" to="." method="_on_secret_settings_menu_t_1_collected"]
[connection signal="toggle_camera_zoom" from="Menus/SecretSettingsMenu" to="." method="_on_secret_settings_menu_toggle_camera_zoom"]
[connection signal="toggle_free_roam_camera" from="Menus/SecretSettingsMenu" to="." method="_on_secret_settings_menu_toggle_free_roam_camera"]
[connection signal="secret_received" from="Menus/CaveOfWonders" to="." method="_on_cave_of_wonders_secret_received"]
[connection signal="t_2_collected" from="Menus/CaveOfWonders" to="." method="_on_cave_of_wonders_t_2_collected"]
[connection signal="click" from="Items/Wrench" to="." method="_on_wrench_click"]
[connection signal="click" from="Items/FireExtinguisher" to="." method="_on_fire_extinguisher_click"]
[connection signal="click" from="Items/CrumpledPasswordHint" to="." method="_on_crumpled_password_hint_click"]
[connection signal="mouse_entered" from="ItemDropZones/MainMenu" to="." method="_on_item_drop_zone_mouse_entered"]
[connection signal="mouse_exited" from="ItemDropZones/MainMenu" to="." method="_on_item_drop_zone_mouse_exited"]
[connection signal="mouse_entered" from="ItemDropZones/SettingsMenu" to="." method="_on_item_drop_zone_mouse_entered"]
[connection signal="mouse_exited" from="ItemDropZones/SettingsMenu" to="." method="_on_item_drop_zone_mouse_exited"]
[connection signal="mouse_entered" from="ItemDropZones/SecretSettingsMenu" to="." method="_on_item_drop_zone_mouse_entered"]
[connection signal="mouse_exited" from="ItemDropZones/SecretSettingsMenu" to="." method="_on_item_drop_zone_mouse_exited"]
[connection signal="all_letters_collected" from="CollectedLetters" to="." method="_on_collected_letters_all_letters_collected"]
[connection signal="collect" from="CollectableLetters/R" to="." method="_on_r_collect"]
[connection signal="click" from="TrueStartButton" to="." method="_on_true_start_button_click"]
[connection signal="mouse_entered" from="TrueStartButton" to="." method="_on_true_start_button_mouse_entered"]
[connection signal="mouse_exited" from="TrueStartButton" to="." method="_on_true_start_button_mouse_exited"]
[connection signal="killed" from="HelpBot" to="." method="_on_help_bot_killed"]
[connection signal="body_entered" from="ItemBoundery" to="." method="_on_item_boundery_body_entered"]
[connection signal="body_exited" from="ItemBoundery" to="." method="_on_item_boundery_body_exited"]
[connection signal="body_entered" from="HammerManBoundery" to="." method="_on_hammer_man_boundery_body_entered"]
